# batdoc

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
pkg/: publish-aur.sh
pkg/alpine/: APKBUILD
pkg/arch/: .SRCINFO  PKGBUILD
pkg/arch-bin/: .SRCINFO  PKGBUILD
pkg/deb/: changelog  control  copyright  rules
pkg/homebrew/: batdoc.rb
pkg/rpm/: batdoc.spec
src/: codepage.rs  dateconv.rs  doc.rs  docx.rs  error.rs  heuristic.rs  main.rs  markup.rs  pdf.rs  pptx.rs  sheet.rs  xls.rs  xlsx.rs  xml_util.rs
